--- a/WeatherPy/WeatherPy.ipynb
+++ b/WeatherPy/WeatherPy.ipynb
@@ -13,11 +13,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-2-3a134285dcfa>, line 11)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-2-3a134285dcfa>\"\u001b[0;36m, line \u001b[0;32m11\u001b[0m\n\u001b[0;31m    weather_api_key = 8e8e72b35d9ad4ed73e2313dd01ee236\u001b[0m\n\u001b[0m                         ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
    "source": [
     "# Dependencies and Setup\n",
     "import matplotlib.pyplot as plt\n",
@@ -28,7 +37,8 @@
     "from scipy.stats import linregress\n",
     "\n",
     "# Import API key\n",
-    "weather_api_key = \n",
+    "\n",
+    "weather_api_key = 8e8e72b35d9ad4ed73e2313dd01ee236\n",
     "\n",
     "# Incorporated citipy to determine city based on latitude and longitude\n",
     "from citipy import citipy\n",
