--- a/WeatherPy/WeatherPy.ipynb
+++ b/WeatherPy/WeatherPy.ipynb
@@ -840,8 +840,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#to_csv\n",
-    "\n",
     "city_info = {\n",
     "    \"City\": names,\n",
     "    \"Country\": country,\n",
@@ -986,11 +984,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 146,
    "metadata": {},
    "outputs": [],
    "source": [
-    "city_weather.to_csv('output_data_file',header = True)"
+    "city_weather.to_csv('output_data_file.csv',header = True)"
    ]
   },
   {
