--- a/WeatherPy/WeatherPy.ipynb
+++ b/WeatherPy/WeatherPy.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 147,
    "metadata": {
     "scrolled": true
    },
@@ -36,7 +36,7 @@
     "from citipy import citipy\n",
     "\n",
     "# Output File (CSV)\n",
-    "output_data_file = \"output_data/cities.csv\"\n",
+    "output_data_file = \"Output/cities.csv\"\n",
     "\n",
     "# Range of latitudes and longitudes\n",
     "lat_range = (-90, 90)\n",
